src/test/deca/context/valid/others/assign_int_into_float_type.deca
// Description:
//    Assignation d'un int a un flaot donc test de convfloat
//
// Resultats:
//
//
//
// Historique:
//    cree le 07/01/2025

{   
    float x;
    x=3;
}